@@ -9,6 +9,7 @@
 	- Added more comparison VNs for the length field
 	- Automatically remove read notifications after a month
 	- Added Apple iProduct platform
+	- Removed XML sitemap
 	- Bugfix: only redirect VN search to VN page if page=1
 	- Bugfix: remove duplicate votes when merging tags (fixes a 500)
 	- Bugfix: Multi::Anime: don't crash when anidb returns an invalid or empty year
